2006-08-08  root  <root@gills.dancysoft.com>
1.1.56
	
	* Makefile: Use maild.pam.suse when building on SuSE.  

	* maild.pam.suse: New.

2006-08-06  Kevin Layer  <layer@relay.known.net>

	* Makefile: tweaks for SuSE

2006-07-30  root  <root@gills.dancysoft.com>
1.1.55

	* Makefile, *.spec.in, auth.cl, load.cl:
	Changed client authentication code so that it uses PAM now.
	Updated RPM specs to supply /etc/pam.d/smtp.

	* maild.pam, pam.cl: New

	* config.cl: Fixed the documentation for *client-authentication*

2006-07-05  Ahmon Dancy  <dancy@dancy>
1.1.54
	* config.cl: New parameter: *rcpt-to-negative-initial-delay*,
	defaults to 5 (seconds).  

	* smtp-server.cl: If RCPT TO is to fail with 4xx or 5xx code,
	sleep for a while before reporting the failure.  Initially, sleep
	for *rcpt-to-negative-initial-delay* seconds, then double each
	subsequent time.  This is to slow down dictionary spam attacks.

2006-06-14  Ahmon Dancy  <dancy@dancy>
1.1.53
	
	* Include "5.7.1" prefix on Relaying denied response.

2006-04-12  Ahmon Dancy  <dancy@dancy>
1.1.52
	When adding a From: header, quote the gecos information if
	necessary:

	* emailaddr.cl: New function: quote-if-necessary.

	* header.cl: make-from-header: Make use of quote-if-necessary.

2006-04-09  root  <root@gills.dancysoft.com>
1.1.51

	* greylist.sql: For whitelist table, do not specify 'not null' for
	the expire column.  A NULL in the expire column indicates a record
	that should not expire.  Manually issue this SQL statement to fix
	your whitelist table definition if necessary:

	alter table whitelist modify expire bigint;	

	* aliases.cl: Fix processing of continuation lines.

1.1.50
        * aliases.cl:  Be tolerant of syntax errors during parsing of 
	aliases files. 
	
1.1.49

	* config.cl: Updated some comments.  Removed *short-host-name*
	since it's not really a configuration parameter.  

	* dns.cl: Minor reformatting.

	* recips.cl: local-domain-p: Include (gethostname) in the list of